--- a/src/styles/1-components/navbar/_Navbar.scss
+++ b/src/styles/1-components/navbar/_Navbar.scss
@@ -36,7 +36,7 @@
       -webkit-transition: border-radius 1.2s;
 
       &:hover {
-          border-radius: 50px 10px;
+          border-radius: 50px 50px 50px 10px;
           background-color: $blanco-to; 
           color: $gris1; 
       }
