--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -3,6 +3,213 @@
   text-align: center;
 }
 
+.mapcard {
+  background-color: transparent;
+  height: 80vh;
+  width: 18rem;
+  position: absolute;
+  text-align: left;
+  margin: 10% 70% 7% 7%;
+}
+
+.mapcard h1 {
+  font: 2.8rem Roboto, sans-serif;
+  height: 10rem;
+}
+
+.mapcard p {
+  font: 1rem Roboto, sans-serif;
+}
+
+.mapcard .cardbtn {
+  width: 100%;
+  height: 3rem;
+  background-color: #333333;
+  border-radius: 5px;
+  border: none;
+  font: 1rem Roboto, sans-serif;
+  color: #FFFFFF;
+  text-transform: uppercase;
+  cursor: pointer;
+  transition: border-radius 1.2s;
+  -webkit-transition: border-radius 1.2s;
+}
+
+.mapcard .cardbtn:hover {
+  border-radius: 35px 10px;
+  background-color: #ba1863;
+}
+
+.mapcard {
+  background-color: transparent;
+  height: 80vh;
+  width: 18rem;
+  position: absolute;
+  text-align: left;
+  margin: 10% 70% 7% 7%;
+}
+
+.mapcard h1 {
+  font: 2.8rem Roboto, sans-serif;
+  height: 10rem;
+}
+
+.mapcard p {
+  font: 1rem Roboto, sans-serif;
+}
+
+.mapcard .cardbtn {
+  width: 100%;
+  height: 3rem;
+  background-color: #333333;
+  border-radius: 5px;
+  border: none;
+  font: 1rem Roboto, sans-serif;
+  color: #FFFFFF;
+  text-transform: uppercase;
+  cursor: pointer;
+  transition: border-radius 1.2s;
+  -webkit-transition: border-radius 1.2s;
+}
+
+.mapcard .cardbtn:hover {
+  border-radius: 35px 10px;
+  background-color: #ba1863;
+}
+
+.project-link {
+  width: 100vw;
+  position: absolute;
+  background-color: transparent;
+  margin-top: 80vh;
+  margin-bottom: 1rem;
+}
+
+.project-link h2 {
+  font: bold 1.2rem/2rem Oswald;
+}
+
+.project-link img {
+  cursor: pointer;
+}
+
+.mapbox-parent-container {
+  position: relative;
+  width: 100vw;
+  height: 100vh;
+}
+
+.mapbox-parent-container .mapboxgl-control-container {
+  display: none;
+}
+
+.mapbox-parent-container .map-container {
+  width: 100%;
+  height: 100%;
+}
+
+.mapbox-parent-container .map-overview-container {
+  position: absolute;
+  top: .5rem;
+  left: 73vw;
+  width: 25%;
+  height: 25%;
+  overflow: hidden;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  -moz-box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+.project-card {
+  background-color: transparent;
+  height: 30rem;
+  width: 28rem;
+  border-radius: 1.2rem 1.2rem;
+  color: #373737;
+  -webkit-box-shadow: 0 8px 8px -4px #bdbdbd;
+          box-shadow: 0 8px 8px -4px #bdbdbd;
+  font-family: 'Roboto', sans-serif;
+}
+
+.project-card .card-img {
+  height: 4.2rem;
+  width: 26rem;
+  border-radius: 1.2rem 1.2rem 0 0;
+}
+
+.project-card .card-info {
+  background-color: #FFFFFF;
+  padding: 1.2rem;
+  height: 23rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  text-align: left;
+}
+
+.project-card .card-info h6 {
+  margin: 5px 0;
+  font-size: 1rem;
+}
+
+.project-card .card-info h4 {
+  margin: 5px 0;
+  font-size: 1.8rem;
+  font-weight: 400;
+}
+
+.project-card .card-info p {
+  font-size: 0.8rem;
+}
+
+.project-card .card-info .full-view {
+  width: 100%;
+  height: 3rem;
+  background-color: transparent;
+  margin-top: auto;
+  border-radius: 5px;
+  border: #333333 solid 1px;
+  font: 1rem Roboto, sans-serif;
+  color: #333333;
+  text-transform: uppercase;
+  cursor: pointer;
+  transition: border-radius 1.2s;
+  -webkit-transition: border-radius 1.2s;
+}
+
+.project-card .card-info .full-view:hover {
+  border-radius: 50px 10px;
+  background-color: #ba1863;
+  color: #f2f2f2;
+}
+
+.projects-g {
+  height: -webkit-max-content;
+  height: -moz-max-content;
+  height: max-content;
+  width: 100vw;
+  padding-top: 2rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.projects-g .grid-projects {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[2];
+      grid-template-columns: repeat(2, 1fr);
+  grid-auto-rows: auto;
+  grid-gap: 1rem;
+}
+
 .navbar {
   background-color: #1A30DB;
   height: 3.5rem;
@@ -51,7 +258,7 @@
 }
 
 .navbar .nav-options .nav-item:hover {
-  border-radius: 50px 10px;
+  border-radius: 50px 50px 50px 10px;
   background-color: #FFFFFF;
   color: #333333;
 }
@@ -69,100 +276,69 @@
   color: #ffbc15;
 }
 
-.mapcard {
-  background-color: transparent;
-  height: 20rem;
-  width: 18rem;
-  position: absolute;
-  text-align: left;
-  margin: 10% 70% 7% 7%;
+.footer {
+  background-color: #1A30DB;
+  height: 3.5rem;
+  padding: 0 10rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
-.mapcard h1 {
-  font: 2.8rem Roboto, sans-serif;
-  height: 10rem;
-}
-
-.mapcard p {
-  font: 1rem Roboto, sans-serif;
-}
-
-.mapcard .cardbtn {
-  width: 100%;
-  height: 3rem;
-  background-color: #333333;
-  border-radius: 5px;
+.footer .logo {
+  background: transparent;
   border: none;
-  font: 1rem Roboto, sans-serif;
-  color: #FFFFFF;
-  text-transform: uppercase;
   cursor: pointer;
+}
+
+.footer .nav-options {
+  color: #FFFFFF;
+  width: 25vw;
+  height: 2rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  list-style-type: none;
+  text-transform: uppercase;
+  font: 0.9rem normal Roboto, sans-serif;
+}
+
+.footer .nav-options .nav-item {
+  cursor: pointer;
+  padding: 0.5rem;
+  letter-spacing: 1.25px;
   transition: border-radius 1.2s;
   -webkit-transition: border-radius 1.2s;
 }
 
-.mapcard .cardbtn:hover {
-  border-radius: 50px 10px;
-  background-color: #ba1863;
+.footer .nav-options .nav-item:hover {
+  -webkit-filter: opacity(30%);
+          filter: opacity(30%);
 }
 
-.project-link {
-  width: 100vw;
-  position: absolute;
-  background-color: transparent;
-  margin-top: 80vh;
-  margin-bottom: 1rem;
+.footer .nav-options a {
+  text-decoration: none;
 }
 
-.project-link h2 {
-  font: bold 1.2rem/2rem Oswald;
+.footer .nav-options a:visited {
+  color: #ffbc15;
 }
 
-.mapbox-parent-container {
-  position: relative;
-  width: 100vw;
-  height: 100vh;
-}
-
-.mapbox-parent-container .mapboxgl-control-container {
-  display: none;
-}
-
-.mapbox-parent-container .map-container {
-  width: 100%;
-  height: 100%;
-}
-
-.mapbox-parent-container .map-overview-container {
-  position: absolute;
-  top: .5rem;
-  left: 73vw;
-  width: 25%;
-  height: 25%;
-  overflow: hidden;
-  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-  -moz-box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-  -webkit-box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-}
-
-.projects-g {
-  height: -webkit-max-content;
-  height: -moz-max-content;
-  height: max-content;
-  width: 100vw;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-.projects-g .grid-projects {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: (1fr)[2];
-      grid-template-columns: repeat(2, 1fr);
+.Main .projects-g {
+  margin-top: 35vh;
+  margin-bottom: 10vh;
 }
 
 body {
