--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,7 +1,5 @@
 @import './App';
-@import './1-components/navbar/Navbar';
-@import './1-components/mapbox/Mapbox';
-@import './1-components/projects/Projects';
+@import './2-layout/Main';
 
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@400;600&family=Roboto:wght@400;500;700&display=swap');
 
