--- a/src/styles/1-components/projects/_Projects.scss
+++ b/src/styles/1-components/projects/_Projects.scss
@@ -1,12 +1,18 @@
+@import './ProjectCard';
+
 .projects-g {
-    height: max-content;
-    width: 100vw;
+  height: max-content;
+  width: 100vw;
+  padding-top: 2rem;
 
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 
-    .grid-projects {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-    }
+  .grid-projects {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-auto-rows: auto;
+
+    grid-gap: 1rem;
+  }
 }
