--- a/src/styles/1-components/projects/_Projects.scss
+++ b/src/styles/1-components/projects/_Projects.scss
@@ -13,6 +13,7 @@
     grid-template-columns: repeat(2, 1fr);
     grid-auto-rows: auto;
 
-    grid-gap: 1rem;
+    column-gap: 1rem;
+    row-gap: 1.2rem;
   }
 }
