--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -122,9 +122,12 @@
 
 .project-card {
   background-color: transparent;
-  max-height: 34rem;
+  min-height: 34rem;
+  max-height: -webkit-fit-content;
+  max-height: -moz-fit-content;
+  max-height: fit-content;
   width: 28rem;
-  border-radius: 1.2rem 1.2rem;
+  border-radius: 1.2rem;
   color: #373737;
   -webkit-box-shadow: 0 8px 8px -4px #bdbdbd;
           box-shadow: 0 8px 8px -4px #bdbdbd;
@@ -136,42 +139,113 @@
   height: 10rem;
   width: 100%;
   border-radius: 1.2rem 1.2rem 0 0;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .project-card .card-info {
   background-color: #FFFFFF;
   padding: 1.2rem;
-  height: 22rem;
+  min-height: 24rem;
+  max-height: -webkit-fit-content;
+  max-height: -moz-fit-content;
+  max-height: fit-content;
+  border-radius: 0 0 1.2rem 1.2rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+      -ms-flex-flow: column wrap;
+          flex-flow: column wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   text-align: left;
 }
 
 .project-card .card-info h6 {
   margin: 5px 0;
-  font-size: 1rem;
+  font-size: 0.9rem;
 }
 
 .project-card .card-info h4 {
-  margin: 5px 0;
-  font-size: 1.8rem;
+  margin: 2px 0;
+  font-size: 1.6rem;
   font-weight: 400;
 }
 
 .project-card .card-info p {
   font-size: 0.8rem;
+  display: -webkit-box;
+  max-width: 100%;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  -webkit-transition-duration: .2s;
+          transition-duration: .2s;
+}
+
+.project-card .card-info p:hover {
+  -webkit-line-clamp: 5;
+}
+
+.project-card .card-info .service-container {
+  width: 100%;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[2];
+      grid-template-columns: repeat(2, 1fr);
+  -webkit-column-gap: 10px;
+          column-gap: 10px;
+  row-gap: 10px;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  margin-bottom: 1.2rem;
+}
+
+.project-card .card-info .service-container .services-btn {
+  height: 2.7rem;
+  width: 100%;
+  background-color: transparent;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row;
+          flex-flow: row;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-radius: 40px;
+  border: #333333 solid 1px;
+  white-space: normal;
+  font: .8rem Roboto;
+}
+
+.project-card .card-info .service-container .services-btn img {
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
+.project-card .card-info .service-container .services-btn:hover {
+  background-color: #1A30DB;
+  color: #FFFFFF;
+}
+
+.project-card .card-info .service-container .services-btn:hover img {
+  -webkit-filter: invert(100%);
+          filter: invert(100%);
 }
 
 .project-card .card-info .full-view {
-  width: 100%;
   height: 3rem;
+  width: 100%;
   background-color: transparent;
-  margin-top: auto;
   border-radius: 5px;
   border: #333333 solid 1px;
   font: 1rem Roboto, sans-serif;
@@ -209,7 +283,9 @@
   -ms-grid-columns: (1fr)[2];
       grid-template-columns: repeat(2, 1fr);
   grid-auto-rows: auto;
-  grid-gap: 1rem;
+  -webkit-column-gap: 1rem;
+          column-gap: 1rem;
+  row-gap: 1.2rem;
 }
 
 .navbar {
