working on fetch project info

--- a/src/styles/1-components/mapbox/_MapCard.scss
+++ b/src/styles/1-components/mapbox/_MapCard.scss
@@ -2,6 +2,7 @@
     background-color: transparent;
     height: 80vh;
     width: 18rem;
+    z-index: 2;
 
     position: absolute;
     text-align: left;
