--- a/src/styles/1-components/mapbox/_ProjectLink.scss
+++ b/src/styles/1-components/mapbox/_ProjectLink.scss
@@ -2,6 +2,7 @@
     width: 100vw;
     position: absolute;
     background-color: transparent;
+    z-index: 2;
 
     margin-top: 80vh;
     margin-bottom: 1rem;
