--- a/src/styles/1-components/projects-id/_ProjectInfo.scss
+++ b/src/styles/1-components/projects-id/_ProjectInfo.scss
@@ -1,45 +1,74 @@
 .projectinfo {
-    height: 30rem;
+  height: fit-content;
 
-    font-family: 'Roboto', sans-serif;
-    margin: 1.5rem 9rem;
+  font-family: 'Roboto', sans-serif;
+  
+
+  display: grid;
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+  column-gap: 1.5rem;
+
+  .project-text {
+    .p-location {
+      margin: 5px 0 .5rem;
+      font-size: 1.2rem;
+    }
+
+    .p-name {
+      margin: 2px 0 2rem;
+      font-size: 2.8rem;
+      font-weight: 400;
+    }
+
+    
+  }
+
+  .pimage {
+    width: 30rem;
+    height: 30rem;
+    border-radius: 1.2rem;
+    object-fit: cover;
+  }
+
+  p {
+    margin-top: 2rem;
+    font-size: 1.2rem;
+  }
+}
+
+.s-container {
+    width: 100%;
 
     display: grid;
-    grid-template-columns: 50% 50%;
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 10px;
+    row-gap: 10px;
+    align-content: center;
+    
+    margin-bottom: 1.2rem;
 
-    .service-container {
-        width: 100%;
-  
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        column-gap: 10px;
-        row-gap: 10px;
-        align-content: center;
-        
-        margin-bottom: 1.2rem;
-  
-        .services-btn {
-          height: 2.7rem;
-          width: 100%;
-          background-color: transparent;
-  
-          display: flex;
-          flex-flow: row;
-          justify-content: flex-start;
-          align-items: center;
-  
-          border-radius: 40px;
-          border: $gris1 solid 1px;
-  
-          white-space: normal;
-          font: .8rem Roboto;
-        }
-    }
+    .s-btn {
+      height: 2.7rem;
+      width: 100%;
+      background-color: transparent;
 
-    img {
-        width: 30rem;
-        height: 30rem;
-        border-radius: 1.2rem;
-        object-fit: cover;
+      display: flex;
+      flex-flow: row;
+      justify-content: flex-start;
+      align-items: center;
+
+      border-radius: 40px;
+      border: $gris1 solid 1px;
+
+      white-space: normal;
+      font: .8rem Roboto;
+
+      .limage {
+        object-fit: contain;
+      }
+
+      &:hover {
+        font-size: 1rem;
+      }
     }
-}
+  }
