--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -96,6 +96,15 @@
   cursor: pointer;
 }
 
+.popups {
+  border-radius: 2rem;
+  width: 30rem;
+}
+
+.marker {
+  background-image: url("https://www.logolynx.com/images/logolynx/d9/d9919c041510c71109ff9bb7a42e2259.png");
+}
+
 .mapbox-parent-container {
   position: relative;
   width: 100vw;
@@ -121,17 +130,6 @@
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   -moz-box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   -webkit-box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-}
-
-.p-location {
-  margin: 5px 0;
-  font-size: 0.9rem;
-}
-
-.p-name {
-  margin: 2px 0;
-  font-size: 1.6rem;
-  font-weight: 400;
 }
 
 .project-card {
@@ -183,6 +181,17 @@
       -ms-flex-pack: justify;
           justify-content: space-between;
   text-align: left;
+}
+
+.project-card .card-info .p-location {
+  margin: 5px 0;
+  font-size: 0.9rem;
+}
+
+.project-card .card-info .p-name {
+  margin: 2px 0;
+  font-size: 1.6rem;
+  font-weight: 400;
 }
 
 .project-card .card-info p {
@@ -430,16 +439,43 @@
 }
 
 .projectinfo {
-  height: 30rem;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
   font-family: 'Roboto', sans-serif;
-  margin: 1.5rem 9rem;
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 50% 50%;
-      grid-template-columns: 50% 50%;
+  -ms-grid-columns: (minmax(0, 1fr))[2];
+      grid-template-columns: repeat(2, minmax(0, 1fr));
+  -webkit-column-gap: 1.5rem;
+          column-gap: 1.5rem;
 }
 
-.projectinfo .service-container {
+.projectinfo .project-text .p-location {
+  margin: 5px 0 .5rem;
+  font-size: 1.2rem;
+}
+
+.projectinfo .project-text .p-name {
+  margin: 2px 0 2rem;
+  font-size: 2.8rem;
+  font-weight: 400;
+}
+
+.projectinfo .pimage {
+  width: 30rem;
+  height: 30rem;
+  border-radius: 1.2rem;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.projectinfo p {
+  margin-top: 2rem;
+  font-size: 1.2rem;
+}
+
+.s-container {
   width: 100%;
   display: -ms-grid;
   display: grid;
@@ -453,7 +489,7 @@
   margin-bottom: 1.2rem;
 }
 
-.projectinfo .service-container .services-btn {
+.s-container .s-btn {
   height: 2.7rem;
   width: 100%;
   background-color: transparent;
@@ -476,12 +512,34 @@
   font: .8rem Roboto;
 }
 
-.projectinfo img {
-  width: 30rem;
-  height: 30rem;
-  border-radius: 1.2rem;
-  -o-object-fit: cover;
-     object-fit: cover;
+.s-container .s-btn .limage {
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
+.s-container .s-btn:hover {
+  font-size: 1rem;
+}
+
+.project-problem {
+  margin-top: 3rem;
+}
+
+.project-problem h3 {
+  font: normal 400 1.5rem Roboto, sans-serif;
+  margin-bottom: 2rem;
+}
+
+.project-problem p {
+  font: normal 400 1rem/1.5rem Roboto, sans-serif;
+}
+
+.IdProjects {
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  margin: 1.5rem 9rem 9rem;
+  font-family: 'Roboto', sans-serif;
 }
 
 body {
