--- a/src/styles/1-components/mapbox/_Mapbox.scss
+++ b/src/styles/1-components/mapbox/_Mapbox.scss
@@ -19,9 +19,9 @@
       .map-overview-container {
         position: absolute;
         top: .5rem;
-        left: 73vw;
-        width: 25%;
-        height: 25%;
+        left: 77%;
+        width: 20%;
+        height: 20%;
         overflow: hidden;
         box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
         -moz-box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
