--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,25 +1,51 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Oswald:wght@400;600&family=Roboto:wght@400;500;700&display=swap");
 .Main {
   text-align: center;
 }
 
-.mapcard {
-  background-color: transparent;
-  height: 80vh;
-  width: 18rem;
+.in-map {
+  /* From https://css.glass */
+  background: rgba(117, 207, 240, 0.34);
+  backdrop-filter: blur(4.9px);
+  -webkit-backdrop-filter: blur(4.9px);
+  height: 57vh;
+  width: 20rem;
   z-index: 2;
+  border-radius: 1rem;
   position: absolute;
   text-align: left;
-  margin: 10% 70% 7% 7%;
+  margin: 10% 70% 7% 5%;
+  padding: 1rem;
 }
 
-.mapcard h1 {
+.in-map h1 {
   font: 2.8rem Roboto, sans-serif;
   height: 10rem;
 }
 
-.mapcard p {
+.in-map p {
   font: 1rem Roboto, sans-serif;
+}
+
+.in-id {
+  margin-top: 8rem;
+}
+
+.in-id h1 {
+  font: normal 400 2rem/2.2rem Roboto, sans-serif;
+  text-align: center;
+}
+
+.in-id p {
+  font: 1rem Roboto, sans-serif;
+  text-align: justify;
+}
+
+.mapcard {
+  z-index: 2;
+  width: 100%;
+  height: 100%;
 }
 
 .mapcard .cardbtn {
@@ -41,23 +67,48 @@
   background-color: #ba1863;
 }
 
-.mapcard {
-  background-color: transparent;
-  height: 80vh;
-  width: 18rem;
+.in-map {
+  /* From https://css.glass */
+  background: rgba(117, 207, 240, 0.34);
+  backdrop-filter: blur(4.9px);
+  -webkit-backdrop-filter: blur(4.9px);
+  height: 57vh;
+  width: 20rem;
   z-index: 2;
+  border-radius: 1rem;
   position: absolute;
   text-align: left;
-  margin: 10% 70% 7% 7%;
+  margin: 10% 70% 7% 5%;
+  padding: 1rem;
 }
 
-.mapcard h1 {
+.in-map h1 {
   font: 2.8rem Roboto, sans-serif;
   height: 10rem;
 }
 
-.mapcard p {
+.in-map p {
   font: 1rem Roboto, sans-serif;
+}
+
+.in-id {
+  margin-top: 8rem;
+}
+
+.in-id h1 {
+  font: normal 400 2rem/2.2rem Roboto, sans-serif;
+  text-align: center;
+}
+
+.in-id p {
+  font: 1rem Roboto, sans-serif;
+  text-align: justify;
+}
+
+.mapcard {
+  z-index: 2;
+  width: 100%;
+  height: 100%;
 }
 
 .mapcard .cardbtn {
@@ -96,13 +147,46 @@
   cursor: pointer;
 }
 
-.popups {
+.mapboxgl-popup-content {
+  z-index: 5;
+  width: 26rem;
   border-radius: 2rem;
-  width: 30rem;
+  text-align: left;
+  padding: 0;
+}
+
+.mapboxgl-popup-content h1 {
+  font: normal 400 1.5rem/1.5rem Roboto, sans-serif;
+  padding: 0 10px;
+}
+
+.mapboxgl-popup-content h3 {
+  font: normal 400 1rem/1rem Roboto, sans-serif;
+  padding: 0 10px;
+}
+
+.mapboxgl-popup-content p {
+  font-size: .8rem;
+  padding: 0 10px;
+}
+
+.mapboxgl-popup-content .popupi {
+  height: 7rem;
+  width: 26rem;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 1.2rem 1.2rem 0 0;
+}
+
+.mapboxgl-popup-content .mapboxgl-popup-close-button {
+  display: none;
 }
 
 .marker {
   background-image: url("https://www.logolynx.com/images/logolynx/d9/d9919c041510c71109ff9bb7a42e2259.png");
+  background-size: cover;
+  width: 50px;
+  border-radius: 50%;
 }
 
 .mapbox-parent-container {
@@ -123,9 +207,9 @@
 .mapbox-parent-container .map-overview-container {
   position: absolute;
   top: .5rem;
-  left: 73vw;
-  width: 25%;
-  height: 25%;
+  left: 77%;
+  width: 20%;
+  height: 20%;
   overflow: hidden;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   -moz-box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
@@ -249,16 +333,6 @@
 .project-card .card-info .service-container .services-btn img {
   -o-object-fit: contain;
      object-fit: contain;
-}
-
-.project-card .card-info .service-container .services-btn:hover {
-  background-color: #1A30DB;
-  color: #FFFFFF;
-}
-
-.project-card .card-info .service-container .services-btn:hover img {
-  -webkit-filter: invert(100%);
-          filter: invert(100%);
 }
 
 .project-card .card-info .full-view {
@@ -451,17 +525,6 @@
           column-gap: 1.5rem;
 }
 
-.projectinfo .project-text .p-location {
-  margin: 5px 0 .5rem;
-  font-size: 1.2rem;
-}
-
-.projectinfo .project-text .p-name {
-  margin: 2px 0 2rem;
-  font-size: 2.8rem;
-  font-weight: 400;
-}
-
 .projectinfo .pimage {
   width: 30rem;
   height: 30rem;
@@ -471,8 +534,8 @@
 }
 
 .projectinfo p {
-  margin-top: 2rem;
-  font-size: 1.2rem;
+  margin-top: 2.5rem;
+  font-size: 1.1rem;
 }
 
 .s-container {
@@ -525,21 +588,189 @@
   margin-top: 3rem;
 }
 
-.project-problem h3 {
-  font: normal 400 1.5rem Roboto, sans-serif;
-  margin-bottom: 2rem;
-}
-
 .project-problem p {
   font: normal 400 1rem/1.5rem Roboto, sans-serif;
+}
+
+.project-collapsible {
+  margin-top: 6rem;
+}
+
+.Collapsible {
+  background-color: transparent;
+}
+
+.Collapsible__contentInner {
+  padding: 10px;
+}
+
+.Collapsible__contentInner p {
+  margin-bottom: 10px;
+  font-size: 14px;
+  line-height: 20px;
+}
+
+.Collapsible__contentInner p:last-child {
+  margin-bottom: 0;
+}
+
+.Collapsible__trigger {
+  display: block;
+  font-weight: 600;
+  text-decoration: none;
+  position: relative;
+  border-top: 1px solid #333333;
+  padding: 10px;
+  background: transparent;
+  color: #333333;
+}
+
+.Collapsible__trigger:after {
+  font-family: 'FontAwesome';
+  content: '▼';
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  display: block;
+  -webkit-transition: -webkit-transform 300ms;
+  transition: -webkit-transform 300ms;
+  transition: transform 300ms;
+  transition: transform 300ms, -webkit-transform 300ms;
+}
+
+.Collapsible__trigger.is-open:after {
+  -webkit-transform: rotateZ(180deg);
+          transform: rotateZ(180deg);
+}
+
+.Collapsible__trigger.is-disabled {
+  opacity: 0.5;
+  background-color: #6f6f6f;
+}
+
+.main-gallery {
+  width: 100%;
+  height: 30rem;
+  margin-top: 5rem;
+  margin-bottom: 5rem;
+}
+
+.main-gallery .project-gallery {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  height: 12rem;
+  width: 100%;
+}
+
+.main-gallery .project-gallery .gallery-img {
+  max-height: 100%;
+  width: 32%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  vertical-align: bottom;
+  margin: .2rem;
+  border-radius: .5rem;
+}
+
+.project-impact {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.project-impact .chart-container {
+  margin-top: 4rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  padding: 0;
+}
+
+.project-impact .chart-container .graph-info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  max-height: 7rem;
+  max-width: 12rem;
+  background-color: #f2f2f2;
+  border-radius: .8rem;
+}
+
+.project-impact .chart-container .graph-info h3 {
+  font: normal 500 1.1rem/1.3rem Roboto, sans-serif;
+  text-transform: uppercase;
+  padding: .5rem .6rem;
+  color: #333333;
+}
+
+.project-impact .chart-container .graph-info h4 {
+  font: normal bold 3.7rem/.7rem Roboto, sans-serif;
+  color: #1A30DB;
+  margin: 0;
+}
+
+.map-i-container {
+  margin-top: 4rem;
+}
+
+.map-i-container .map-project {
+  height: 400px;
 }
 
 .IdProjects {
   height: -webkit-fit-content;
   height: -moz-fit-content;
   height: fit-content;
-  margin: 1.5rem 9rem 9rem;
+  margin: 1.5rem 9rem 5rem;
   font-family: 'Roboto', sans-serif;
+}
+
+.IdProjects .p-medium {
+  font: normal 400 1.5rem Roboto, sans-serif;
+  margin-bottom: 2rem;
+}
+
+.IdProjects .p-big {
+  margin: 5px 0 .5rem;
+  font-size: 1.2rem;
+}
+
+.IdProjects .p-name {
+  margin: 2px 0 2rem;
+  font-size: 2.8rem;
+  font-weight: 400;
 }
 
 body {
